--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ description = "Sanctuary Protocol - Adaptive Scarcity & Quantum-Resistant Blockc
 members = [
     "node",
     "pallets/template",
+    "pallets/tokenomics",
     "runtime",
 ]
 resolver = "2"
@@ -17,6 +18,7 @@ resolver = "2"
 [workspace.dependencies]
 sanctuary-runtime = { path = "./runtime", default-features = false }
 pallet-template = { path = "./pallets/template", default-features = false }
+pallet-tokenomics = { path = "./pallets/tokenomics", default-features = false }
 clap = { version = "4.5.13" }
 frame-benchmarking-cli = { version = "47.0.0", default-features = false }
 frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
@@ -73,6 +75,7 @@ sp-storage = { version = "22.0.0", default-features = false }
 sp-transaction-pool = { version = "36.0.0", default-features = false }
 sp-version = { version = "39.0.0", default-features = false }
 substrate-wasm-builder = { version = "26.0.1", default-features = false }
+log = { version = "0.4.22", default-features = false }
 
 [profile.release]
 opt-level = 3
