🔄 Rebrand: Sanctuary Protocol → Tesserax Protocol
- Rename project from sanctuary-node to tesserax-node
- Change token symbol from SANC to TSRX
- Update all Cargo.toml package names and descriptions
- Update chain_spec.rs with Tesserax chain names and IDs
- Rename sanctuary_constants to tesserax_constants
- Rename SanctuaryPrecompiles to TesseraxPrecompiles
- Update all import paths from sanctuary_runtime to tesserax_runtime
- Update README.md and blueprint.md documentation
- Update emission pallet comments

Chain Properties:
- Chain Name: Tesserax Development
- Token Symbol: TSRX
- Token Decimals: 18
- Chain ID: 7777

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [workspace.package]
 license = "MIT-0"
 authors = ["Minerva & Gemini (The Architect)"]
-homepage = "https://sanctuary.network"
-repository = "https://github.com/sanctuary-protocol/sanctuary-node.git"
+homepage = "https://tesserax.network"
+repository = "https://github.com/tesserax-protocol/tesserax-node.git"
 edition = "2021"
-description = "Sanctuary Protocol - Adaptive Scarcity & Quantum-Resistant Blockchain"
+description = "Tesserax Protocol - Adaptive Scarcity & Quantum-Resistant Blockchain"
 
 [workspace]
 members = [
@@ -19,7 +19,7 @@ resolver = "2"
 # ═══════════════════════════════════════════════════════════════════════════
 # LOCAL CRATES
 # ═══════════════════════════════════════════════════════════════════════════
-sanctuary-runtime = { path = "./runtime", default-features = false }
+tesserax-runtime = { path = "./runtime", default-features = false }
 pallet-template = { path = "./pallets/template", default-features = false }
 pallet-emission = { path = "./pallets/emission", default-features = false }
 
