--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "sanctuary-runtime"
-description = "Sanctuary Protocol Runtime - Adaptive Scarcity & EVM Compatible"
+name = "tesserax-runtime"
+description = "Tesserax Protocol Runtime - Adaptive Scarcity & EVM Compatible"
 version = "0.1.0"
 license = "MIT-0"
 authors.workspace = true
