--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -83,15 +83,9 @@ substrate-frame-rpc-system.workspace = true
 # Cumulus (for EVM proof size host function)
 cumulus-primitives-proof-size-hostfunction = { path = "/home/minerva/polkadot-sdk/cumulus/primitives/proof-size-hostfunction" }
 
-# TODO: Add Frontier RPC in next phase for full Metamask compatibility
-# fc-rpc.workspace = true
-# fc-rpc-core.workspace = true
-# fc-mapping-sync.workspace = true
-# fc-db.workspace = true
-# fc-storage.workspace = true
-# fp-rpc.workspace = true
-# fp-evm.workspace = true
-# pallet-ethereum.workspace = true
+# Frontier primitives (for runtime API types)
+fp-rpc.workspace = true
+fp-evm.workspace = true
 
 [build-dependencies]
 substrate-build-script-utils.default-features = true
