🔗 Phase 2.3: Extended Ethereum RPC Methods
EXTENDED RPC METHODS (Metamask Compatible):
- eth_chainId      → 0x1e61 (7777)
- net_version      → 7777
- web3_clientVersion → Tesserax/v0.1.0
- eth_gasPrice     → 0x3b9aca00 (1 Gwei)
- eth_syncing      → false
- net_listening    → true
- net_peerCount    → 0x0

ADDED:
- node/src/eth.rs - Prepared full Frontier RPC module (commented out for future)
- Extended rpc.rs with manual eth_* endpoint implementations
- Added Frontier RPC dependencies to workspace (fc-api, fc-rpc, fc-db, etc.)
- Added sc-rpc to workspace dependencies

METAMASK SETTINGS:
- Network Name: Tesserax Protocol
- RPC URL: http://127.0.0.1:9944
- Chain ID: 7777
- Symbol: TSRX

NOTE:
Full eth_* RPC with Frontier backend (eth_getBalance, eth_sendRawTransaction,
eth_call, etc.) prepared in eth.rs but requires more extensive service.rs
changes. Current implementation provides sufficient compatibility for
Metamask network detection and basic queries.

RUNTIME APIs AVAILABLE (Phase 2.2):
- EthereumRuntimeRPCApi - Full implementation
- ConvertTransactionRuntimeApi - Transaction conversion

NEXT:
- Phase 3: Quantum Vault implementation
- Future: Complete Frontier backend integration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ sc-network = { path = "/home/minerva/polkadot-sdk/substrate/client/network" }
 sc-offchain = { path = "/home/minerva/polkadot-sdk/substrate/client/offchain" }
 sc-service = { path = "/home/minerva/polkadot-sdk/substrate/client/service" }
 sc-telemetry = { path = "/home/minerva/polkadot-sdk/substrate/client/telemetry" }
+sc-rpc = { path = "/home/minerva/polkadot-sdk/substrate/client/rpc" }
 sc-transaction-pool = { path = "/home/minerva/polkadot-sdk/substrate/client/transaction-pool" }
 sc-transaction-pool-api = { path = "/home/minerva/polkadot-sdk/substrate/client/transaction-pool/api" }
 
