--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -50,6 +50,8 @@ sc-service.default-features = true
 sc-service.workspace = true
 sc-telemetry.default-features = true
 sc-telemetry.workspace = true
+sc-rpc.default-features = true
+sc-rpc.workspace = true
 sc-transaction-pool-api.default-features = true
 sc-transaction-pool-api.workspace = true
 sc-transaction-pool.default-features = true
@@ -83,9 +85,19 @@ substrate-frame-rpc-system.workspace = true
 # Cumulus (for EVM proof size host function)
 cumulus-primitives-proof-size-hostfunction = { path = "/home/minerva/polkadot-sdk/cumulus/primitives/proof-size-hostfunction" }
 
-# Frontier primitives (for runtime API types)
+# Frontier RPC (for full Ethereum JSON-RPC / Metamask compatibility)
+fc-api = { path = "/home/minerva/frontier/client/api" }
+fc-rpc = { path = "/home/minerva/frontier/client/rpc", features = ["rpc-binary-search-estimate", "txpool"] }
+fc-rpc-core = { path = "/home/minerva/frontier/client/rpc-core" }
+fc-mapping-sync = { path = "/home/minerva/frontier/client/mapping-sync" }
+fc-db = { path = "/home/minerva/frontier/client/db" }
+fc-storage = { path = "/home/minerva/frontier/client/storage" }
 fp-rpc.workspace = true
 fp-evm.workspace = true
+pallet-ethereum = { path = "/home/minerva/frontier/frame/ethereum" }
+
+# Network sync 
+sc-network-sync = { path = "/home/minerva/polkadot-sdk/substrate/client/network/sync" }
 
 [build-dependencies]
 substrate-build-script-utils.default-features = true
