feat: Implement emission pallet with full test suite, benchmarking, and comprehensive documentation, including a testnet guide.

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -158,6 +158,7 @@ runtime-benchmarks = [
 	"pallet-sudo/runtime-benchmarks",
 	"pallet-template/runtime-benchmarks",
 	"pallet-emission/runtime-benchmarks",
+	"pallet-quantum-vault/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
 	"pallet-transaction-payment/runtime-benchmarks",
 	"pallet-evm/runtime-benchmarks",
